update swagger annotations
