# backend-services/go/src/controllers/http_controller.go
@@ -13,6 +13,7 @@ type HttpController struct{}
 // @ID public
 // @Produce json
 // @Success 200 {object} string
+// @Security ApiKeyAuth
 // @Router /public [get]
 func (pc *HttpController) PublicEndpoint(c *gin.Context) {
 	c.JSON(http.StatusOK, gin.H{"message": "Hello from a public endpoint! You don't need to be authenticated to see this."})
@@ -23,6 +24,7 @@ func (pc *HttpController) PublicEndpoint(c *gin.Context) {
 // @ID auth
 // @Produce json
 // @Success 200 {object} string
+// @Security ApiKeyAuth
 // @Router /auth [get]
 func (ac *HttpController) AuthEndpoint(c *gin.Context) {
 	c.JSON(http.StatusOK, gin.H{"message": "Hello from a private endpoint! You need to be authenticated to see this."})
@@ -33,6 +35,7 @@ func (ac *HttpController) AuthEndpoint(c *gin.Context) {
 // @ID rbac restricted
 // @Produce json
 // @Success 200 {object} string
+// @Security ApiKeyAuth
 // @Router /rbac [get]
 func (rc *HttpController) RBACEndpoint(c *gin.Context) {
 	c.JSON(http.StatusOK, gin.H{"message": "Hello from a private RBAC restricted endpoint! You need the read:messages scope to see this."})
