# backend-services/go/src/docs/swagger.json
@@ -15,6 +15,11 @@
     "paths": {
         "/auth": {
             "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "Hello from a private endpoint! You need to be authenticated to see this.",
                 "produces": [
                     "application/json"
@@ -33,6 +38,11 @@
         },
         "/public": {
             "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "This route is always accessible.",
                 "produces": [
                     "application/json"
@@ -51,6 +61,11 @@
         },
         "/rbac": {
             "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "Hello from a private RBAC restricted endpoint! You need the read:messages scope to see this.",
                 "produces": [
                     "application/json"
